# CTkTrimSlider

./: README.md  example.py  pyproject.toml
CTkTrimSlider/: __init__.py  ctk_trimslider.py  custom_rendering.py  example.py
stubs/: __init__.pyi  custom_rendering.pyi
