[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CTkTrimSlider"
version = "1.0.4"
description = "A video trim slider widget for customtkinter"
readme = "README.md"
authors = [
  {name = "David Gingerich", email = "gingerichdvd@gmail.com"}
]

requires-python = ">=3.11"
license = { file = "LICENSE" }

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",    
  "Operating System :: OS Independent"
]

dependencies = [
  "customtkinter>=5.2.2",
  "darkdetect>=0.8.0",
  "packaging>=26.0",
]

[project.urls]
Homepage = "https://github.com/gindvd/CTkTrimSlider/"

[project.optional-dependencies]
dev = [
  "mypy==1.19.1",
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
strict = false

[tool.setuptools.package-data]
your_package = ["py.typed"]

[[tool.mypy.overrides]]
module = [
  "customtkinter",
  "customtkinter.*",
]
ignore_missing_imports = true